        - +columns now behaves just like columns by not stripping a
          fully-qualified 'as' spec (i.e. foo.bar results in $obj->foo->bar)
        - Add full INSERT...RETURNING support for Oracle

    * Fixes
        - Fixed read-only attribute set attempt in ::Storage::Replicated
          (RT#62642)
        - Fix incomplete logic while detecting correct Oracle sequence
          on insert
        - Major overhaul of Storage::Oracle to handle enabled quoting
        - Fixed incorrect composition of select/as/columns attributes during
          chaining (RT#61235)
        - Proper serialization of resultsets with open cursors
        - Refactor handling of RDBMS-side values during insert() - fix
          regression of inserts into a Postgres / ::Replicated combination
        - Missing dependency check in t/60core.t (RT#62635)
        - Fix regressions in IC::DT registration logic
        - Fix infinite loops on old perls with a recent Try::Tiny
        - Improve "fork()" on Win32 by reimplementing a more robust DBIC
          thread support (still problematic, pending a DBI fix)
        - Properly quote table name on INSERT with no values
        - Work around possible Storage destruction warnings
        - Fix count of grouped resultsets using HAVING with aliases
        - Setting belongs_to columns/relationships no longer leaves the
          FK value and related object out of sync

    * Misc
        - Switch all serialization to use Storable::nfreeze for portable
          architecture independent ice
        - Fix the bogus META.yml dependency injection issue for good
        - Refactor DBIx::Class::Storage::Statistics::debugfh() to be lazy

0.08124 2010-10-28 14:23 (UTC)
    * New Features / Changes
        - Add new -ident "function" indicating rhs is a column name
          { col => { -ident => 'othercol' } } vs { col => \'othercol' }
        - Extend 'proxy' relationship attribute
        - Use DBIx::Class::Storage::Debug::PrettyPrint when the