@@ -19,6 +19,8 @@ Revision history for DBIx::Class
           (RT#62642)
         - Fix incomplete logic while detecting correct Oracle sequence
           on insert
+        - Fix detection of Oracle sequences for tables without an explicitly
+          specified schema (RT#63493)
         - Major overhaul of Storage::Oracle to handle enabled quoting
         - Fixed incorrect composition of select/as/columns attributes during
           chaining (RT#61235)
